@startuml

title __MODEL's Class Diagram__\n

  namespace  {
    namespace odel {
      class Model.HttpUrlConnection {
          {static} + downloadFromURL()
          - HttpUrlConnection()
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.Model {
          - name : String
          + Model()
          + actualice()
          + getDiagramDataset()
          + getImageUrl()
          + getInfo()
          + getName()
          + getNotifier()
          + loadData()
          + setStrategy()
          + subscribe()
          + unsubscribe()
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.Pair {
          - first : Object
          - second : Object
          + Pair()
          + getFirst()
          + getSecond()
          + toString()
      }
    }
  }
  

  Model.Model o-- Model.Observer.Notifier : notifier
  Model.Model o-- Model.Strategy.Strategy : strategyProxy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
